--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/be3ff5ad85.js" crossorigin="anonymous"></script>
     <style>
         body {
             margin: 0px 0px;
