--- a/assign2_2.html
+++ b/assign2_2.html
@@ -54,9 +54,9 @@
             align-content: stretch;
             grid-column-gap: 2rem;
             grid-row-gap: 1rem;
+            grid-template-columns: 2fr 5fr;
             grid-template-areas: 
                 "portrait-name portrait-name"
-                "artist artist"
                 "portrait details";
             /* αντιστοιχεί ονόματα στα items του grid*/
         }
@@ -162,115 +162,95 @@
             <div class="container">
                 <div class="main-container">
                     <main class="main-item1">
-                        <h2>Self-portrait in a Straw Hat</h2>
-                        <p>By <a href="#">Louise Elisabeth Lebrun</a></p>
+                        <h2>Customer Registration</h2>
 
                         <picture>
+                            <p>- Last Item viewed</p>
                             <source media="screen and (max-width:600px)" srcset="images/113010-m.jpg">
                             <img src="images/113010.jpg" class="img-thumbnail img-responsive" alt="Self-portrait in a Straw Hat" />
                         </picture>
 
                         <section id="details">
-                            <p id="portraitDesc">
-                                The painting appears, after cleaning, to be an autograph replica of a picture, the original of which was painted in Brussels in 1782 in free imitation of Rubens's 'Chapeau de Paille', which LeBrun had seen in Antwerp. It was exhibited in Paris in 1782
-                                at the Salon de la Correspondance. LeBrun's original is recorded in a private collection in France.
-                            </p>
-                        
-                            <p class="price">$700</p>
-                        
-                            <div id="cart">
-                                <button type="button">
-                                <i class="fas fa-gift"></i>
-                                <a href="#"> Add to Wish List</a>  
-                                </button>
-                                <button type="button">
-                                <i class="fas fa-shopping-cart"></i>
-                                <a href="#"> Add to Shopping Cart</a>
-                                </button>
-                            </div>
-                            <!-- end cart -->
-                            <p>&nbsp;</p>
 
                             <!-- Wrap the element that changes between pages (i.e. table - form) in a container
                                 for placement in the grid template. -->
                             <div id="insertedBox">
-                                <table>
-                                    <caption>Product Details</caption>
-                                    <tr>
-                                        <th>Date:</th>
-                                        <td>1782</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Medium:</th>
-                                        <td>Oil on canvas</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Dimensions:</th>
-                                        <td>98cm x 71cm</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Home:</th>
-                                        <td><a href="#">National Gallery, London</a></td>
-                                    </tr>
-                                    <tr>
-                                        <th>Genres:</th>
-                                        <td><a href="#">Realism</a>, <a href="#">Rococo</a></td>
-                                    </tr>
-                                    <tr>
-                                        <th>Subjects:</th>
-                                        <td><a href="#">People</a>, <a href="#">Arts</a></td>
-                                    </tr>
-                                </table>
+                                <form method="post" action="http://courses.e-ce.uth.gr/ECE9124/process.php">
+                                    <fieldset id="account">
+                                        <legend>Account</legend>
+                                        <div class="fieldItem">
+                                            <label for="email">Email</label>
+                                            <input type="email" id="email" name="email" placeholder="email@example.com">
+                                        </div>
+                                        <div class="fieldItem">
+                                            <label for="password">Password</label>
+                                            <input type="password" id="password" name="password" placeholder="At least 8 characters" minlength="8">
+                                        </div>
+                                        <div class="fieldItem">
+                                            <label for="rpassword">Repeat Password</label>
+                                            <input type="password" id="rpassword" name="rpassword" placeholder="At least 8 characters" minlength="8">
+                                        </div>
+                                    </fieldset>
+                                    <fieldset id="profile">
+                                        <legend>Profile</legend>
+                                        <div class="fieldItem">
+                                            <label for="firstName">First Name</label>
+                                            <input type="text" id="firstName" name="firstName" pattern="^[A-Za-z][A-Za-z\.\- ]+[A-Za-z]$">
+                                        </div>
+                                        <div class="fieldItem">
+                                            <label for="lastName">Last Name</label>
+                                            <input type="text" id="lastName" name="lastName" pattern="^[A-Za-z][A-Za-z\.\- ]+[A-Za-z]$">
+                                        </div>
+                                        <div class="fieldItem">
+                                            <label for="birthday">Birth Day</label>
+                                            <input type="date" id="birthday" name="birthday">
+                                        </div>
+                                    </fieldset>
+                                    <fieldset id="contact">
+                                        <legend>Contact</legend>
+                                        <div class="fieldItem">
+                                            <label for="address">Address</label>
+                                            <input type="text" id="address" name="address">
+                                        </div>
+                                        <div class="fieldItem">
+                                            <label for="stateRegion">State/Region</label>
+                                            <input type="text" id="stateRegion" name="stateRegion">
+                                        </div>
+                                        <div class="fieldItem">
+                                            <label for="city">City</label>
+                                            <input type="text" id="city" name="city">
+                                        </div>
+                                        <div class="fieldItem">
+                                            <label for="zip">Zip</label>
+                                            <input type="text" id="zip" name="zip" max="8" pattern="^\d[\d ]+\d$">
+                                        </div>
+                                        <div class="fieldItem">
+                                            <label for="country">Country</label>
+                                            <select id="country" name="county">
+                                                <option value="" disabled hidden selected>--</option>
+                                                <option value="Greece">Greece</option>
+                                                <option value="United States">Unity States</option>
+                                                <option value="China">China</option>
+                                                <option value="Russia">Russia</option>
+                                                <option value="Germany">Germany</option>
+                                            </select>
+                                        </div>
+                                        <div class="fieldItem">
+                                            <label for="mobile">Mobile</label>
+                                            <input type="tel" id="mobile" name="mobile" placeholder="NNN-NNN-NNNN" pattern="^\d{3}\-\d{3}\-\d{4}$">
+                                        </div>
+                                    </fieldset>
+                                    <div id=termsField>
+                                        <input type="checkbox" id="terms" name="terms" value="1">
+                                        <label for="terms">I agree to the <a href="#">Terms of the Site</a></label>
+                                    </div>
+                                    <button type="submit">Create Account</button>
+                                </form>
                             </div>
                             <!-- end insertedBox -->
                         </section>
                         <!-- end details -->
                     </main>
-
-                    <section class="main-item2">
-                        <h3>Similar Products </h3>
-                        <div id="productsRow">
-                            <div class="item first">
-                                <img src="images/thumbs/116010.jpg" alt="...">
-                                <div>
-                                    <p class="similarTitle"><a href="#">Artist Holding a Thistle</a></p>
-                                    <button type="button"><a href="#"><i class="fas fa-info-circle"></i> View</a></button>
-                                    <button type="button"><a href="#"><i class="fas fa-gift"></i> Wish</a></button>
-                                    <button type="button"><a href="#"><i class="fas fa-shopping-cart"></i> Cart</a></button>
-                                </div>
-                            </div>
-
-                            <div class="item second">
-                                <img src="images/thumbs/120010.jpg" alt="...">
-                                <div>
-                                    <p class="similarTitle"><a href="#">Portrait of Eleanor of Toledo</a></p>
-                                    <button type="button"><a href="#"><i class="fas fa-info-circle"></i> View</a></button>
-                                    <button type="button"><a href="#"><i class="fas fa-gift"></i> Wish</a></button>
-                                    <button type="button"><a href="#"><i class="fas fa-shopping-cart"></i> Cart</a></button>
-                                </div>
-                            </div>
-
-                            <div class="item third">
-                                <img src="images/thumbs/107010.jpg" alt="...">
-                                <div>
-                                    <p class="similarTitle"><a href="#">Madame de Pompadour</a></p>
-                                    <button type="button"><a href="#"><i class="fas fa-info-circle"></i> View</a></button>
-                                    <button type="button"><a href="#"><i class="fas fa-gift"></i> Wish</a></button>
-                                    <button type="button"><a href="#"><i class="fas fa-shopping-cart"></i> Cart</a></button>
-                                </div>
-                            </div>
-
-                            <div class="item forth">
-                                <img src="images/thumbs/106020.jpg" alt="...">
-                                <div>
-                                    <p class="similarTitle"><a href="#">Girl with a Pearl Earring</a></p>
-                                    <button type="button"><a href="#"><i class="fas fa-info-circle"></i> View</a></button>
-                                    <button type="button"><a href="#"><i class="fas fa-gift"></i> Wish</a></button>
-                                    <button type="button"><a href="#"><i class="fas fa-shopping-cart"></i> Cart</a></button>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
 
                     <aside class="main-item3">
                         <div id="cartInfo">
