--- a/assign2_1.html
+++ b/assign2_1.html
@@ -52,8 +52,7 @@
             display: grid;
             grid-auto-rows: min-content;
             align-content: stretch;
-            grid-column-gap: 2rem;
-            grid-row-gap: 1rem;
+            gap: 1rem 2rem;
             grid-template-areas: 
                 "portrait-name portrait-name"
                 "artist artist"
