--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                     </div>
                     
                     <div class="footer-item4">
-                        <h4><i class="fas fa-envelope"></i> Contact us <a href="#contact-form">▼</a></h4>
+                        <h4><i class="fas fa-envelope"></i> Contact us <a href="#contact-form"><i class="fas fa-sort-down"></i></a></h4>
                         <form id="contact-form">  
                             <div class="field">
                                 <label for="name">Name</label>
