title for contact form name field
shows to the user a message if the content in the input box is invalid

--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -422,7 +422,7 @@
                         <form id="contact-form">  
                             <div class="field">
                                 <label for="name">Name</label>
-                                <input type="text" id="name" class="input" name="name" placeholder="Enter Name ..." pattern="[A-Za-z\.\- ]+[A-Za-z]$">
+                                <input type="text" id="name" class="input" name="name" placeholder="Enter Name ..." pattern="[A-Za-z\.\- ]+[A-Za-z]$" title="only a-z A-Z . or -">
                             </div>
                             <div class="field">
                                 <label for="email">Email</label>
