--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                         <form id="contact-form">  
                             <div class="field">
                                 <label for="name">Name</label>
-                                <input type="text" id="name" class="input" name="name" placeholder="Enter Name ..." pattern="[A-Za-z\.\- ]+[A-Za-z]$">
+                                <input type="text" id="name" class="input" name="name" placeholder="Enter Name ..." pattern="[A-Za-z\.\- ]+[A-Za-z]$" title="only a-z A-Z . or -">
                             </div>
                             <div class="field">
                                 <label for="email">Email</label>
