--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                     </div>
                     
                     <div class="footer-item4">
-                        <h4><i class="fas fa-envelope"></i> Contact us <a href="#contact-form-appear" class="responsive-effects"><i class="fas fa-expand-alt"></i></a></h4>
+                        <h4><i class="fas fa-envelope"></i> Contact us <a href="#contact-form-appear" class="responsive-effects"><i class="fas fa-sort-down"></i></a></h4>
                         <fieldset id="contact-form-appear">  
                             <legend class="responsive-effects">Contact</legend> 
                             <form> <a href="#footer-top" class="close"></a>
