tabindex in .close testing if it works

--- a/assign2_1_r - Copy.html
+++ b/assign2_1_r - Copy.html
@@ -420,7 +420,7 @@
                         <h4><i class="fas fa-envelope"></i> Contact us <a href="#contact-form-appear" class="responsive-effects"><i class="fas fa-sort-down"></i></a></h4>
                         <fieldset id="contact-form-appear">  
                             <legend class="responsive-effects">Contact</legend> 
-                            <form> <a tabindex="1" href="#footer-top" class="close"></a>
+                            <form> <a href="#footer-top" class="close"></a>
                                 <div class="field">
                                     <label for="name">Name</label>
                                     <input type="text" id="name" class="input" name="name" placeholder="Enter Name ..." pattern="[A-Za-z\.\- ]+[A-Za-z]$" title="only a-z A-Z . -">
