same as previous push

--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -295,7 +295,7 @@
                                 </div>
                             </div>
 
-                            <div class="item third">
+                            <div class="item third"tabindex="2">
                                 <img src="images/thumbs/107010.jpg" alt="...">
                                 <div>
                                     <p class="similarTitle"><a href="#">Madame de Pompadour</a></p>
