change tab inex

--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -285,7 +285,7 @@
                                 </div>
                             </div>
 
-                            <div class="item second">
+                            <div class="item second"  tabindex="1">
                                 <img src="images/thumbs/120010.jpg" alt="...">
                                 <div>
                                     <p class="similarTitle"><a href="#">Portrait of Eleanor of Toledo</a></p>
@@ -295,7 +295,7 @@
                                 </div>
                             </div>
 
-                            <div class="item third"tabindex="2">
+                            <div class="item third" tabindex="1">
                                 <img src="images/thumbs/107010.jpg" alt="...">
                                 <div>
                                     <p class="similarTitle"><a href="#">Madame de Pompadour</a></p>
@@ -305,7 +305,7 @@
                                 </div>
                             </div>
 
-                            <div class="item forth">
+                            <div class="item forth" tabindex="1">
                                 <img src="images/thumbs/106020.jpg" alt="...">
                                 <div>
                                     <p class="similarTitle"><a href="#">Girl with a Pearl Earring</a></p>
