--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             }
 
             .container {
-                display: contents;
-            }
+                display: contents;  /*remove unwanted space (avoid horizontal scrolling/overflow)*/           }
         }
         
         @media (min-width: 701px) {
@@ -116,7 +115,6 @@
                 display: grid;
                 grid-template-areas: 'footer1' 'footer2' 'footer3' 'footer4' 'copy';
                 grid-gap: 5px;
-                padding: 10px;
             }
         }
 
@@ -277,7 +275,7 @@
                     <section class="main-item2">
                         <h3>Similar Products </h3>
                         <div id="productsRow">
-                            <div class="item first">
+                            <div class="item first" tabindex="1">
                                 <img src="images/thumbs/116010.jpg" alt="...">
                                 <div>
                                     <p class="similarTitle"><a href="#">Artist Holding a Thistle</a></p>
@@ -287,7 +285,7 @@
                                 </div>
                             </div>
 
-                            <div class="item second">
+                            <div class="item second"  tabindex="1">
                                 <img src="images/thumbs/120010.jpg" alt="...">
                                 <div>
                                     <p class="similarTitle"><a href="#">Portrait of Eleanor of Toledo</a></p>
@@ -297,7 +295,7 @@
                                 </div>
                             </div>
 
-                            <div class="item third">
+                            <div class="item third" tabindex="1">
                                 <img src="images/thumbs/107010.jpg" alt="...">
                                 <div>
                                     <p class="similarTitle"><a href="#">Madame de Pompadour</a></p>
@@ -307,7 +305,7 @@
                                 </div>
                             </div>
 
-                            <div class="item forth">
+                            <div class="item forth" tabindex="1">
                                 <img src="images/thumbs/106020.jpg" alt="...">
                                 <div>
                                     <p class="similarTitle"><a href="#">Girl with a Pearl Earring</a></p>
@@ -417,10 +415,10 @@
                     </div>
                     
                     <div class="footer-item4">
-                        <h4><i class="fas fa-envelope"></i> Contact us <a href="#contact-form-appear" class="responsive-effects"><i class="fas fa-sort-down"></i></a></h4>
+                        <h4><i class="fas fa-envelope"></i> Contact us <a href="#contact-form-appear" class="responsive-effects"><i class="fas fa-plus-circle"></i></a></h4>
                         <fieldset id="contact-form-appear">  
                             <legend class="responsive-effects">Contact</legend> 
-                            <form> <a tabindex="1" href="#footer-top" class="close"></a>
+                            <form> <a tabindex= "1" href="#footer-top" class="close"></a>
                                 <div class="field">
                                     <label for="name">Name</label>
                                     <input type="text" id="name" class="input" name="name" placeholder="Enter Name ..." pattern="[A-Za-z\.\- ]+[A-Za-z]$" title="only a-z A-Z . -">
