still not working

--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -241,7 +241,7 @@
                             <div id="insertedBox">
                                 <table>
                                     <caption>Product Details<a href="#table-appear" class="responsive-effects"><i class="fas fa-sort-down"></i></a></caption>
-                                    <div id="table-appear" tabindex="1"> <a tabindex= "1" href="#inserted-box" class="close"></a>
+                                    <div id="table-appear" tabindex="1"> <a href="#inserted-box" class="close"></a>
                                         <tr>
                                             <th>Date:</th>
                                             <td>1782</td>
