details part complete

--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -236,15 +236,15 @@
                             <!-- end cart -->
                             <p>&nbsp;</p>
 
-                            <!-- Wrap the element that changes between pages (i.e. table - form) in a container
-                                for placement in the grid template. -->
+                            <!-- Wrap the element that changes between pages (i.e. table - form) in a container for placement in the grid template. -->
                             <div id="insertedBox">
                                 <table>
-                                    <caption>Product Details<a href="#table-appear" class="responsive-effects"><i class="fas fa-sort-down"></i></a></caption>
-                                    <div id="table-appear" tabindex="1"> <a href="#inserted-box" class="close"></a>
+                                    <caption>Product Details<a href="#table-appear" class="responsive-effects"><i class="fas fa-sort-down"></i></a>
+                                    </caption>
+                                    <tbody id="table-appear"> 
                                         <tr>
                                             <th>Date:</th>
-                                            <td>1782</td>
+                                            <td>1782<a href="#inserted-box" class=" responsive-effects close"><i class="fas fa-sort-up"></i></a></td>
                                         </tr>
                                         <tr>
                                             <th>Medium:</th>
@@ -266,7 +266,7 @@
                                             <th>Subjects:</th>
                                             <td><a href="#">People</a>, <a href="#">Arts</a></td>
                                         </tr>
-                                    </div>
+                                    </tbody>
                                 </table>
                             </div>
                             <!-- end insertedBox -->
