--- a/index.html
+++ b/index.html
@@ -239,12 +239,12 @@
                             <!-- Wrap the element that changes between pages (i.e. table - form) in a container for placement in the grid template. -->
                             <div id="insertedBox">
                                 <table>
-                                    <caption>Product Details<a href="#table-appear" class="responsive-effects"><i class="fas fa-sort-down"></i></a>
+                                    <caption>Product Details<a href="#table-expand" class="responsive-effects"><i class="fas fa-sort-down"></i></a>
                                     </caption>
-                                    <tbody id="table-appear"> 
+                                    <tbody id="table-expand"> 
                                         <tr>
                                             <th>Date:</th>
-                                            <td>1782<a href="#inserted-box" class=" responsive-effects close"><i class="fas fa-sort-up"></i></a></td>
+                                            <td>1782<a href="#inserted-box" class=" responsive-effects shrink"><i class="fas fa-sort-up"></i></a></td>
                                         </tr>
                                         <tr>
                                             <th>Medium:</th>
