--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -166,8 +166,8 @@
                     <nav>
                         <ul>
                             <li><i class="fas fa-user"></i><a href="#"> My Account</a></li>
+                            <li><a href="#cartInfo" class="responsive-active-only"><i class="fas fa-shopping-cart"></i></a><a href="#"> Shopping Cart</a></li>
                             <li><i class="fas fa-gift"></i><a href="#"> Wish List</a></li>
-                            <li><i class="fas fa-shopping-cart"></i><a href="#"> Shopping Cart</a></li>
                             <li><i class="fas fa-arrow-right"></i><a href="#"> Checkout</a></li>
                         </ul>
                     </nav>
@@ -209,7 +209,6 @@
                     <main class="main-item1">
                         <h2>Self-portrait in a Straw Hat</h2>
                         <p>By <a href="#">Louise Elisabeth Lebrun</a></p>
-
                         <picture>
                             <source media="screen and (max-width:600px)" srcset="images/113010-m.jpg">
                             <img src="images/113010.jpg" class="img-thumbnail img-responsive" alt="Self-portrait in a Straw Hat" />
@@ -321,8 +320,7 @@
 
                     <aside class="main-item3">
                         <div id="cartInfo">
-                            <h3>Cart </h3>
-                            
+                            <h3>Cart <a tabindex= "1" href="#" class="responsive-effects close"></a></h3> 
                             <div class= "cart-container">
                                 <div class="cartItem">
                                     <a href="#">
