--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                             </div>
                         </div>
 
-                        <div id="popularCategory">
+                        <div class="popularCategory">
                             <h3>Popular Artists</h3>
                             <ul>
                                 <li><a href="#">Caravaggio</a></li>
@@ -355,7 +355,7 @@
                                 <li><a href="#">Van Gogh</a></li>
                             </ul>
                         </div>
-                        <div id="popularCategory">
+                        <div class="popularCategory">
                             <h3>Popular Genres</h3>
                             <ul>
                                 <li><a href="#">Baroque</a></li>
