--- a/index.html
+++ b/index.html
@@ -346,13 +346,13 @@
                         <div class="popularCategory">
                             <h3>Popular Artists</h3>
                             <ul>
-                                <li><a href="#">Caravaggio</a></li>
-                                <li><a href="#">Cezanne</a></li>
-                                <li><a href="#">Matisse</a></li>
-                                <li><a href="#">Michelangelo</a></li>
-                                <li><a href="#">Picasso</a></li>
-                                <li><a href="#">Raphael</a></li>
-                                <li><a href="#">Van Gogh</a></li>
+                                <li><a href="#">Caravaggio 101</a></li>
+                                <li><a href="#">Cezanne 20</a></li>
+                                <li><a href="#">Matisse 23</a></li>
+                                <li><a href="#">Michelangelo 98</a></li>
+                                <li><a href="#">Picasso 22</a></li>
+                                <li><a href="#">Raphael 99 </a></li>
+                                <li><a href="#">Van Gogh 19</a></li>
                             </ul>
                         </div>
                         <div class="popularCategory">
