--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -240,12 +240,11 @@
                             <!-- Wrap the element that changes between pages (i.e. table - form) in a container for placement in the grid template. -->
                             <div id="insertedBox">
                                 <table>
-                                    <caption>Product Details<a href="#table-expand" class="responsive-effects"><i class="fas fa-sort-down"></i></a>
-                                    </caption>
-                                    <tbody id="table-expand"> 
+                                    <caption>Product Details</caption>
+                                    <tbody> 
                                         <tr>
                                             <th>Date:</th>
-                                            <td>1782<a href="#inserted-box" class=" responsive-effects shrink"><i class="fas fa-sort-up"></i></a></td>
+                                            <td>1782</td>
                                         </tr>
                                         <tr>
                                             <th>Medium:</th>
