--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             .main-container {
                 display: grid;
                 grid-template-areas: 'main' 'similar' 'aside';
-                grid-gap: 5px;
+                grid-gap: 20px;
                 padding: 10px;
             }
 
@@ -277,7 +277,7 @@
                     <section class="main-item2">
                         <h3>Similar Products </h3>
                         <div id="productsRow">
-                            <div class="item first" tabindex="1">
+                            <div class="item" tabindex="1">
                                 <img src="images/thumbs/116010.jpg" alt="...">
                                 <div>
                                     <p class="similarTitle"><a href="#">Artist Holding a Thistle</a></p>
@@ -287,7 +287,7 @@
                                 </div>
                             </div>
 
-                            <div class="item second"  tabindex="1">
+                            <div class="item"  tabindex="1">
                                 <img src="images/thumbs/120010.jpg" alt="...">
                                 <div>
                                     <p class="similarTitle"><a href="#">Portrait of Eleanor of Toledo</a></p>
@@ -297,7 +297,7 @@
                                 </div>
                             </div>
 
-                            <div class="item third" tabindex="1">
+                            <div class="item" tabindex="1">
                                 <img src="images/thumbs/107010.jpg" alt="...">
                                 <div>
                                     <p class="similarTitle"><a href="#">Madame de Pompadour</a></p>
@@ -307,7 +307,7 @@
                                 </div>
                             </div>
 
-                            <div class="item forth" tabindex="1">
+                            <div class="item" tabindex="1">
                                 <img src="images/thumbs/106020.jpg" alt="...">
                                 <div>
                                     <p class="similarTitle"><a href="#">Girl with a Pearl Earring</a></p>
