--- a/index.html
+++ b/index.html
@@ -257,23 +257,23 @@
                                         <legend>Contact</legend>
                                         <div class="fieldItem">
                                             <label for="address">Address</label>
-                                            <input type="text" id="address" name="address" required>
+                                            <input type="text" id="address" name="address">
                                         </div>
                                         <div class="fieldItem">
                                             <label for="stateRegion">State/Region</label>
-                                            <input type="text" id="stateRegion" name="stateRegion" required>
+                                            <input type="text" id="stateRegion" name="stateRegion">
                                         </div>
                                         <div class="fieldItem">
                                             <label for="city">City</label>
-                                            <input type="text" id="city" name="city" pattern="^[A-Za-z][A-Za-z]+[A-Za-z]$" required>
+                                            <input type="text" id="city" name="city" pattern="^[A-Za-z][A-Za-z]+[A-Za-z]$">
                                         </div>
                                         <div class="fieldItem">
                                             <label for="zip">Zip</label>
-                                            <input type="text" id="zip" name="zip" max="8" pattern="^\d[\d ]{3}\d$" required>
+                                            <input type="text" id="zip" name="zip" max="8" pattern="^\d[\d ]{3}\d$">
                                         </div>
                                         <div class="fieldItem">
                                             <label for="country">Country</label>
-                                            <select id="country" name="county" required>
+                                            <select id="country" name="county">
                                                 <option value="" disabled hidden selected>--</option>
                                                 <option value="county 1">Country 1</option>
                                                 <option value="county 2">Country 2</option>
