--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -443,15 +443,15 @@
                             <form> <a tabindex= "1" href="#form-disappear" class="close"></a>
                                 <div class="field">
                                     <label for="name">Name</label>
-                                    <input type="text" id="name" class="input" name="name" placeholder="Enter Name ..." pattern="[A-Za-z\.\- ]+[A-Za-z]$" title="only a-z A-Z . -">
+                                    <input type="text" id="name" class="input-field" name="name" placeholder="Enter Name ..." pattern="[A-Za-z\.\- ]+[A-Za-z]$" title="only a-z A-Z . -">
                                 </div>
                                 <div class="field">
                                     <label for="email">Email</label>
-                                    <input type="email" id="email" class="input" name="email" placeholder="Enter email ...">
+                                    <input type="email" id="email" class="input-field" name="email" placeholder="Enter email ...">
                                 </div>
                                 <div class="field">
                                     <label for="message">Message</label>
-                                    <textarea id="message" class="input" name="message" rows="4" maxlength="1000" placeholder="Enter message ..." pattern="^[\w. ]{0,1000}+[\w.]$"></textarea>
+                                    <textarea id="message" class="input-field" name="message" rows="4" maxlength="1000" placeholder="Enter message ..." pattern="^[\w. ]{0,1000}+[\w.]$"></textarea>
                                 </div>
                                 <button type="submit">Submit</button>
                             </form>
