--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -28,7 +28,7 @@
                 display: grid;
                 grid-template-columns: repeat(5, 1fr) 1.2fr;
                 grid-template-areas: 'main main main main main aside''similar similar similar similar similar aside';
-                grid-gap: 3%;
+                grid-gap: 20px;
             }
 
             .container {
