--- a/assign2_2_r.html
+++ b/assign2_2_r.html
@@ -323,6 +323,49 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="popularCategory">
+                            <h3>Popular Artists</h3>
+                            <ul>
+                                <li>
+                                    <img src="images/artists/101.jpg" class="responsive-effects" title="Caravaggio" alt="Caravaggion">
+                                    <a href="#">Caravaggio</a>
+                                </li>
+                                <li>
+                                    <img src="images/artists/20.jpg" class="responsive-effects" title="Cezanne" alt="Cezanne">
+                                    <a href="#">Cezanne</a>
+                                </li>
+                                <li>
+                                    <img src="images/artists/23.jpg" class="responsive-effects" title="Matisse" alt="Matisse">
+                                    <a href="#">Matisse</a>
+                                </li>
+                                <li>
+                                    <img src="images/artists/98.jpg" class="responsive-effects" title="Michelangelo" alt="Michelangelo">
+                                    <a href="#">Michelangelo</a>
+                                </li>
+                                <li>
+                                    <img src="images/artists/22.jpg" class="responsive-effects" title="Picasso" alt="Picasso">
+                                    <a href="#">Picasso</a>
+                                </li>
+                                <li>
+                                    <img src="images/artists/99.jpg" class="responsive-effects" title="Raphael" alt="Raphael">
+                                    <a href="#">Raphael</a>
+                                </li>
+                                <li>
+                                    <img src="images/artists/19.jpg" class="responsive-effects" title="Van Gogh" alt="Van Gogh">
+                                    <a href="#">Van Gogh</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="popularCategory">
+                            <h3>Popular Genres</h3>
+                            <ul>
+                                <li><a href="#">Baroque</a></li>
+                                <li><a href="#">Cubism</a></li>
+                                <li><a href="#">Impressionism</a></li>
+                                <li><a href="#">Renaissance</a></li>
+                            </ul>
+                        </div>
                     </aside>
                 </div>
 
