--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 display: grid;
                 grid-template-columns: repeat(5, 1fr) 1.2fr;
                 grid-template-areas: 'main main main main main aside''similar similar similar similar similar aside';
-                grid-gap: 3%;
+                grid-gap: 20px;
             }
 
             .container {
@@ -104,9 +104,6 @@
             grid-area: aside;
             display:flex;
             flex-direction: column;
-            justify-content: flex-start;
-            align-self: stretch;
-            flex-wrap: nowrap;
             row-gap: 2rem;
         }
         
@@ -314,6 +311,7 @@
                                     <button type="button"><a href="#"><i class="fas fa-shopping-cart"></i> Cart</a></button>
                                 </div>
                             </div>
+
                         </div>
                     </section>
 
