remove unnecessary images

--- a/assign2_1_r.html
+++ b/assign2_1_r.html
@@ -89,8 +89,6 @@
             .container {
                 max-width: 1300px;
                 margin: auto;
-                /* γιατί υπερχείλιση περιεχομένου στο main??????
-                border: solid 1px#0963ae; */
             }
         }
         
@@ -147,8 +145,8 @@
             grid-area: copy;
         }
     </style>
-    <link href="css/all.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/all.css" rel="stylesheet"> <!-- μαζί με την άσκηση -->
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -197,7 +195,6 @@
                 <!-- end mainNavigationRow -->        
             </div>
         </header>
-
 
 
         <div class="item2">
