--- a/assign2_2_r.html
+++ b/assign2_2_r.html
@@ -90,8 +90,6 @@
             .container {
                 max-width: 1300px;
                 margin: auto;
-                /* γιατί υπερχείλιση περιεχομένου στο main??????
-                border: solid 1px#0963ae; */
             }
         }
         
@@ -151,8 +149,8 @@
             grid-area: copy;
         }
     </style>
-    <link href="css/all.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/all.css" rel="stylesheet"> <!-- μαζί με την άσκηση -->
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
