--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         }
     </style>
     <link href="css/all.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
