--- a/index2.html
+++ b/index2.html
@@ -148,7 +148,7 @@
         }
     </style>
     <link href="css/all.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
